fix - Edit testimonials box shadow property and faq section font size on mobile

--- a/src/components/testimonialCard/style.css
+++ b/src/components/testimonialCard/style.css
@@ -1,10 +1,10 @@
 .testimonial-card {
   position: relative;
   min-width: min(18rem, 100%);
+  margin: 2rem;
+  padding: 5rem 3rem 3rem;
   border: 0.5rem solid var(--light-blue-100);
   border-radius: var(--border-rs);
-  padding: 5rem 3rem 3rem;
-  margin: 2rem;
   background: var(--page-bg);
 }
 
@@ -71,7 +71,7 @@
 @media screen and (max-width: 1024px) {
   .testimonial-card {
     border: none;
-    box-shadow: var(--box-shadow);
+    box-shadow: 0px 0px 8px 0px #00000026;
   }
 
   .testimonial-card__quote--top {
@@ -86,7 +86,7 @@
 @media (max-width: 600px) {
   .testimonial-card {
     padding: 4rem 2rem 2rem;
-    border-radius: 3rem;
+    border-radius: var(--border-rs);
   }
 
   .testimonial-card__quote {
